--- a/src/components/pages/notFound/notFound.css
+++ b/src/components/pages/notFound/notFound.css
@@ -1,9 +1,15 @@
+h1,
+h2 {
+  margin-block: 0.5rem;
+}
+
 .not_found-container {
   height: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: #fff;
 }
 
 .not_found-img {
