--- a/src/components/layout/layout-header/layoutHeader.css
+++ b/src/components/layout/layout-header/layoutHeader.css
@@ -1,5 +1,10 @@
 .header {
+  width: 100%;
+}
+
+.header-container {
   display: flex;
+  max-width: 1200px;
   justify-content: space-between;
   align-items: center;
 }
