--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -1,6 +1,7 @@
 .layout_container {
   display: grid;
   width: 100%;
-  justify-content: space-between;
+  min-height: 100vh;
+  justify-content: center;
   align-items: center;
 }
