feat: add styles to nav links and layout

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -2,6 +2,9 @@
   display: grid;
   width: 100%;
   min-height: 100vh;
+}
+
+.outlet-container {
+  display: flex;
   justify-content: center;
-  align-items: center;
 }
