--- a/src/components/layout/layout-header/layoutHeader.css
+++ b/src/components/layout/layout-header/layoutHeader.css
@@ -1,10 +1,62 @@
 .header {
   width: 100%;
+  height: 75px;
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  border-bottom: 1px solid #949393;
+  box-shadow: 0 1px 5px 5px #949393;
 }
 
 .header-container {
   display: flex;
   max-width: 1200px;
+  width: 100%;
+  margin-inline: 10px;
   justify-content: space-between;
   align-items: center;
+}
+
+.header-nav {
+  display: flex;
+  height: 100%;
+}
+
+.nav-link {
+  display: flex;
+  padding: 0 10px;
+  width: 95px;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  cursor: pointer;
+  color: black;
+  font-size: 1rem;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  transition: 300ms ease-in-out;
+}
+
+.nav-link:hover {
+  background-color: #94939380;
+  transition: 300ms ease-in-out;
+}
+
+.nav-link.active {
+  background-color: #a7a7a7;
+  color: #ffffff;
+  transition: 300ms ease-in-out;
+}
+
+@media (max-width: 768px) {
+  .header-nav {
+    flex-direction: column;
+    height: 100%;
+  }
+  .nav-link {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    font-size: 0.9rem;
+  }
 }
