--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
-body {
-  width: 100%;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  margin: 0;
+html {
+  font-size: 10px;
 }
 
-#root {
+body {
   width: 100%;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+* {
+  box-sizing: border-box;
 }
