--- a/src/components/generic/messageBox/messageBox.css
+++ b/src/components/generic/messageBox/messageBox.css
@@ -9,6 +9,7 @@
   margin: 10px;
   padding: 0 30px 0 5px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.5rem;
   color: rgb(43, 43, 43);
   border: 1px solid;
   border-bottom-width: 4px;
