--- a/src/components/layout/layout-footer/layoutFooter.css
+++ b/src/components/layout/layout-footer/layoutFooter.css
@@ -1,53 +1,50 @@
 .footer {
-  margin-top: auto;
   width: 100%;
-  height: 75px;
-  display: flex;
-  align-items: stretch;
-  justify-content: center;
-  background-color: #4d4d4dd2;
-  color: #fff;
-  border-bottom: 1px solid #949393be;
-  box-shadow: 0 1px 5px 5px #949393be;
+  height: 5rem;
+  padding: 0 var(--content-padding-large);
+  box-shadow: 0 -0.4rem 0.9rem 0.2rem rgba(0, 0, 0, 0.25);
+  background-color: var(--secondary-background-color);
 }
 
-.footer-container {
+.footer__container {
   display: flex;
-  max-width: 1200px;
-  width: 100%;
-  margin-inline: 10px;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-}
-
-.footer-link {
-  display: flex;
-  padding: 0 10px;
-  width: 95px;
+  max-width: var(--max-content-width);
+  width: 100%;
   height: 100%;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  cursor: pointer;
-  color: black;
-  transition: 300ms ease-in-out;
+  margin: auto;
 }
 
-.footer-link:hover {
-  color: #ffffff;
+.footer__authors {
+  display: flex;
+  column-gap: 1rem;
 }
 
-.footer-link.active {
-  color: #ffffffbb;
+.footer__info {
+  font-size: 1.6rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: var(--secondary-color-light);
 }
 
 @media (max-width: 768px) {
   .footer {
-    height: fit-content;
+    padding: 0 var(--content-padding-medium);
   }
-  .footer-container {
-    flex-direction: column;
-    gap: 1rem;
-    padding-block: 10px;
+}
+
+@media (max-width: 450px) {
+  .footer {
+    padding: 0 var(--content-padding-small);
+  }
+
+  .footer__authors {
+    display: flex;
+    column-gap: 0.5rem;
+  }
+
+  .footer__info {
+    font-size: 1rem;
+    text-align: center;
   }
 }
