--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,6 @@
   --main-color-013: rgba(99, 140, 71, 0.13);
   --secondary-color-light: rgba(255, 255, 255, 0.7);
   --secondary-color-light-active: rgb(255, 255, 255);
+
+  --font-color: rgba(0, 0, 0, 0.35);
 }
