--- a/src/components/layout/layout-header/layoutHeader.css
+++ b/src/components/layout/layout-header/layoutHeader.css
@@ -20,6 +20,11 @@
   margin: auto;
 }
 
+.header__control {
+  display: flex;
+  column-gap: 1rem;
+}
+
 @media (max-width: 768px) {
   .header {
     padding: 0 var(--content-padding-medium);
