--- a/src/components/layout/layout-header/userBar/userBar.css
+++ b/src/components/layout/layout-header/userBar/userBar.css
@@ -11,8 +11,10 @@
 }
 
 .burger .user-bar {
-  border-left: none;
   padding-left: 0;
+  padding-bottom: 1.1rem;
+  border-left: none;
+  border-bottom: 0.1rem solid var(--main-color);
 }
 
 .user-bar__img {
