--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,14 @@
   --secondary-background-color: rgb(38, 43, 48);
 
   --main-color: rgb(99, 140, 71);
+  --main-color-light: rgb(156, 194, 131);
   --main-color-013: rgba(99, 140, 71, 0.13);
   --secondary-color-light: rgba(255, 255, 255, 0.7);
   --secondary-color-light-active: rgb(255, 255, 255);
 
-  --font-color: rgba(0, 0, 0, 0.35);
-  
+  --font-author-color: rgba(0, 0, 0, 0.35);
+  --card-shadow-color: rgba(185, 212, 238, 0.92);
+
   --danger-color: rgb(246, 56, 32);
   --danger-color-light: rgb(254, 227, 225);
-
 }
