--- a/src/components/pages/catalog/catalog.css
+++ b/src/components/pages/catalog/catalog.css
@@ -14,11 +14,6 @@
   flex: 1;
 }
 
-.products-main__header {
-  display: flex;
-  justify-content: space-between;
-}
-
 .products-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -36,5 +31,36 @@
 @media (max-width: 768px) {
   .products-list {
     grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+  }
+  .sidebar {
+    display: none;
+  }
+}
+
+.products-footer__page-settings {
+  display: flex;
+  margin: 0 auto;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 2.2rem;
+  border-top: 0.1rem solid var(--shadow-color);
+  margin-top: 2.75rem;
+  padding-top: 1.1rem;
+}
+
+.products-footer__separator {
+  font-size: 2.4rem;
+  color: var(--main-color-light);
+  text-align: center;
+}
+
+@media (max-width: 500px) {
+  .products-footer__page-settings {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .products-footer__separator {
+    display: none;
   }
 }
