--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,11 @@
   --secondary-color-light-active: rgb(255, 255, 255);
 
   --font-color: rgba(0, 0, 0, 0.35);
-  
+
   --danger-color: rgb(246, 56, 32);
   --danger-color-light: rgb(254, 227, 225);
 
+  --button-background-color: rgb(142, 142, 142);
+  --button-background-color-active: rgba(142, 142, 142, 0.856);
+  --submit-button-background-color: rgb(128, 178, 94);
 }
