--- a/src/components/pages/product/productPage.css
+++ b/src/components/pages/product/productPage.css
@@ -38,6 +38,19 @@
   max-width: 100%;
   height: 50rem;
   text-align: center;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  box-shadow: none;
+  transition: 1s ease-in-out;
+}
+
+.product-page__current-image-container:hover {
+  scale: 1.1;
+}
+
+.product-page__current-image-container:focus {
+  outline: none;
 }
 
 .product-page__current-image {
@@ -51,13 +64,15 @@
 
 .product-page__images-navigation {
   display: flex;
+  position: relative;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 1.2rem;
   justify-content: center;
 }
 
 .product-page__image-container {
   display: flex;
+  position: relative;
   justify-content: center;
   align-items: center;
   max-width: 10rem;
@@ -76,6 +91,11 @@
 .product-page__image-container:hover {
   scale: 1.2;
   box-shadow: 0 0 0.8rem 0 var(--shadow-color);
+  z-index: 2;
+}
+
+.product-page__image-container_active {
+  scale: 1.2;
 }
 
 .product-page__image {
@@ -133,6 +153,74 @@
   background: var(--main-background-color);
 }
 
+.modal-wrapper {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 5rem;
+  right: 0;
+  left: 0;
+  bottom: 5rem;
+  background: var(--main-color-013);
+}
+
+.modal-wrapper__container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  --swiper-theme-color: var(--main-color);
+}
+
+.modal-wrapper__close {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 100;
+  right: 1rem;
+  top: 1rem;
+  width: 5rem;
+  height: 5rem;
+  background: var(--secondary-color-light);
+  font-size: 3rem;
+  font-weight: 900;
+  color: var(--main-background-color);
+  border: 0;
+  transition: font-size 1s ease-in-out, box-shadow 1s ease-in-out;
+}
+
+.modal-wrapper__close:hover {
+  font-size: 3.5rem;
+  box-shadow: 2px 2px 4px var(--main-color);
+}
+
+.modal-wrapper__close:active {
+  font-size: 2.5rem;
+  box-shadow: inset 2px 2px 4px var(--main-color);
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 1.8rem;
+  background: var(--secondary-color-light);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 @media (max-width: 1000px) {
   .product-page__data {
     flex-direction: column;
@@ -161,6 +249,9 @@
   .product-page__description {
     font-size: 1.5rem;
     text-align: center;
+  }
+  .modal-wrapper {
+    bottom: 0;
   }
 }
 
