--- a/src/components/pages/catalog/catalogHeader/catalogHeader.css
+++ b/src/components/pages/catalog/catalogHeader/catalogHeader.css
@@ -34,6 +34,7 @@
 
 .products-header__second-line {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -50,13 +51,23 @@
   text-align: center;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1300px) {
   .products-header__second-line {
     flex-direction: column;
     margin-bottom: 0.5rem;
   }
   .products-header__category-name {
     text-align: center;
+  }
+}
+
+@media (max-width: 1000px) {
+  .products-header__page-settings {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .products-header__separator {
+    display: none;
   }
 }
 
