--- a/src/components/pages/catalog/pageLimit/pageLimit.css
+++ b/src/components/pages/catalog/pageLimit/pageLimit.css
@@ -5,7 +5,7 @@
   background: var(--catalog-header-btns-bg-color);
   color: var(--font-author-color);
   font-family: Inter;
-  font-size: 14px;
+  font-size: 1.4rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
