--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -2,6 +2,7 @@
   width: 25.1rem;
   display: flex;
   position: relative;
+  margin: -1rem 0;
   flex-direction: column;
   border-right: 0.8rem solid var(--secondary-background-color);
   background-color: var(--main-background-color);
