feat: add component for empty cart

--- a/src/components/breadcrumbs/breadcrumbs.css
+++ b/src/components/breadcrumbs/breadcrumbs.css
@@ -22,7 +22,7 @@
 }
 
 .breadcrumbs-link a:hover {
-  color: var(--font-author-color);
+  color: var(--font-color);
 }
 
 @media (max-width: 400px) {
