--- a/src/components/pages/catalog/pageLimit/pageLimit.css
+++ b/src/components/pages/catalog/pageLimit/pageLimit.css
@@ -3,7 +3,7 @@
   border-radius: 0.9rem;
   border: 0.1rem solid var(--main-background-color-light);
   background: var(--catalog-header-btns-bg-color);
-  color: var(--font-author-color);
+  color: var(--font-color);
   font-family: Inter;
   font-size: 1.4rem;
   font-style: normal;
