--- a/src/components/pages/product/productPage.css
+++ b/src/components/pages/product/productPage.css
@@ -84,7 +84,7 @@
   background-color: transparent;
   cursor: pointer;
   transition: 0.5s ease-in;
-  border: 0.1rem solid var(--font-author-color);
+  border: 0.1rem solid var(--font-color);
   transition: 0.5s ease-in-out;
   border-radius: 0.5rem;
   overflow: hidden;
@@ -127,7 +127,7 @@
   text-shadow: 2px 2px 4px var(--shadow-color);
 }
 .product-page__author {
-  color: var(--font-author-color);
+  color: var(--font-color);
   padding-inline: 1.5rem;
   font-family: Inter;
   font-size: 2rem;
@@ -138,7 +138,7 @@
 .product-page__description {
   margin-top: 2rem;
   padding-inline: 1.5rem;
-  color: var(--font-author-color);
+  color: var(--font-color);
   font-family: Inter;
   font-size: 1.6rem;
   font-weight: 500;
