--- a/src/components/pages/cart/emptyCartMassage/EmptyCartMassage.css
+++ b/src/components/pages/cart/emptyCartMassage/EmptyCartMassage.css
@@ -1,15 +1,15 @@
 .empty-cart {
   display: flex;
   margin-top: 3rem;
-  height: 100%;
+  height: calc(100vh - 20rem);
   flex-direction: column;
   align-items: center;
-  justify-content: start;
-  gap: 3rem;
+  justify-content: center;
+  gap: 1rem;
 }
 
 .empty-cart__header {
-  font-size: 3.5rem;
+  font-size: 5rem;
   color: var(--main-color);
 }
 
@@ -50,4 +50,10 @@
   text-shadow: 0.1rem 0.1rem 0.4rem var(--main-color-light);
   color: var(--main-color);
   scale: 1.05;
+}
+
+@media (max-width: 500px) {
+  .empty-cart__header {
+    font-size: 3.5rem;
+  }
 }
