--- a/src/components/layout/layout-header/cartBar/cartBar.css
+++ b/src/components/layout/layout-header/cartBar/cartBar.css
@@ -1,3 +1,7 @@
+.cart-bar {
+  position: relative;
+}
+
 @media (max-width: 768px) {
   .cart-bar {
     width: 100%;
@@ -5,4 +9,18 @@
     justify-content: flex-end;
     padding-right: 2rem;
   }
+}
+
+.cart-bar__quantity {
+  position: absolute;
+  top: 2rem;
+  right: -0.5rem;
+  min-width: 1.7rem;
+  height: 1.7rem;
+  padding: 0 0.3rem;
+  font-size: 1.5rem;
+  text-align: center;
+  color: var(--secondary-color-light);
+  background-color: var(--danger-color);
+  border-radius: 40%;
 }
