--- a/src/components/layout/layout-header/cartBar/cartBar.css
+++ b/src/components/layout/layout-header/cartBar/cartBar.css
@@ -2,15 +2,6 @@
   position: relative;
 }
 
-@media (max-width: 768px) {
-  .cart-bar {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 2rem;
-  }
-}
-
 .cart-bar__quantity {
   position: absolute;
   top: 2rem;
@@ -23,4 +14,17 @@
   color: var(--secondary-color-light);
   background-color: var(--danger-color);
   border-radius: 40%;
+}
+
+@media (max-width: 768px) {
+  .cart-bar {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 2rem;
+  }
+
+  .cart-bar__quantity {
+    right: 1rem;
+  }
 }
