--- a/src/components/pages/user/User.css
+++ b/src/components/pages/user/User.css
@@ -65,7 +65,7 @@ hr {
   margin: 0.3rem 0 1rem 0;
 }
 
-.AddressTable {
+.Table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   /* width: 20rem; */
@@ -76,8 +76,8 @@ hr {
   overflow-x: auto;
 }
 
-.AddressTableData,
-.AddressTableHeader {
+.TableData,
+.TableHeader {
   border: 1px solid #ddd;
   padding: 8px;
   min-width: 16rem;
@@ -85,16 +85,16 @@ hr {
   flex: 0 0 auto;
 }
 
-.AddressTableRow:nth-child(even) {
+.TableRow:nth-child(even) {
   background-color: #f2f2f2;
 }
 
-.AddressTableRow:hover {
+.TableRow:hover {
   background-color: #ddd;
   transition: 0.15s;
 }
 
-.AddressTableHeader {
+.TableHeader {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
