--- a/src/App.css
+++ b/src/App.css
@@ -30,4 +30,6 @@
 
   --danger-color: rgb(246, 56, 32);
   --danger-color-light: rgb(254, 227, 225);
+
+  --bio-background-color: rgb(239, 239, 239);
 }
