--- a/src/utils/accordion/Accordion.css
+++ b/src/utils/accordion/Accordion.css
@@ -1,10 +1,4 @@
-.accordion {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.accordion {
+.Accordion {
   list-style: none;
   margin: 0;
   padding: 0;
