--- a/src/components/pages/cart/modal/modal.css
+++ b/src/components/pages/cart/modal/modal.css
@@ -22,6 +22,20 @@
   padding: 4rem;
 }
 
+.modal__confirm,
+.modal__cancel {
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: none;
+  font: inherit;
+  color: inherit;
+  cursor: pointer;
+  text-align: inherit;
+  text-decoration: none;
+  display: inline-block;
+}
+
 .modal__message {
   color: var(--main-color);
 }
